--- a/babel.config.json
+++ b/babel.config.json
@@ -1,4 +1,4 @@
 {
   "moduleRoot": "./src",
-  "presets": ["@babel/preset-react"]
+  "presets": ["@babel/preset-react", "@babel/preset-typescript"]
 }
